cmake_minimum_required(VERSION 2.8)

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(FontGen)
SET_TARGET_ATTRIBUTE(FontGen "tools")

ADD_SUBDIRECTORY("UV Unwrapper")
SET_TARGET_ATTRIBUTE("UV Unwrapper" "tools")

IF(BUILD_PLATFORM_WINDOWS)
	ADD_SUBDIRECTORY(HLSLcc)
	SET_TARGET_ATTRIBUTE(HLSLcc "tools")
ENDIF()