SET(LIB_NAME DirectXMesh)

INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/DirectXMesh)
INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/DirectXMesh/DirectXMesh)
INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/DirectXMesh/Meshconvert)
INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/DirectXMesh/Utilities)

FILE(GLOB_RECURSE HEADER_LIST *.h*)
FILE(GLOB_RECURSE SOURCE_LIST *.c*)

SOURCE_GROUP("DirectXMesh" FILES ${HEADER_LIST})
SOURCE_GROUP("DirectXMesh" FILES ${SOURCE_LIST})

ADD_LIBRARY(${LIB_NAME} ${HEADER_LIST} ${SOURCE_LIST})