PROJECT(MyGUIEngine)

INCLUDE(MyGUIEngine.list)

IF(${CMAKE_GENERATOR} MATCHES "Visual Studio")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4297")
ENDIF()

INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/freetype/include)
INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/MyGUIEngine/include)

ADD_DEFINITIONS(-DMYGUI_STATIC)
ADD_LIBRARY(MyGUIEngine STATIC ${HEADER_FILES} ${SOURCE_FILES})