SET(LIB_NAME UVAtlas)

INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/UVAtlas)
INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/UVAtlas/UVAtlas)

FILE(GLOB_RECURSE HEADER_LIST *.h*)
FILE(GLOB_RECURSE SOURCE_LIST *.c*)

SOURCE_GROUP("UVAtlas" FILES ${HEADER_LIST})
SOURCE_GROUP("UVAtlas" FILES ${SOURCE_LIST})

ADD_LIBRARY(${LIB_NAME} ${HEADER_LIST} ${SOURCE_LIST})